pkg/gox/testdata/errors/keyword_component_prop_type.gox
package demo

func View() any {
	return <Button type="x" />
}
